--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -46,7 +46,7 @@
         height:35vh;
     }
 
-    
+
     .footer--logo{
         object-fit: contain;
         justify-self: flex-start;
@@ -177,7 +177,7 @@
 @media(max-width:820px){
     .footer{
         width:100%;
-        height:40vh;
+        height:60vh;
         padding: 0em 0 0 2em;
         background-color: rgb(0, 26, 51);;
         display: flex;
@@ -202,13 +202,14 @@
        flex-direction: column;
        justify-content: space-between;
        align-items: center;
-       margin-top: 5em;
        font-weight: 700;
     }
     
     .footer--title{
         align-items:flex-start;
-        font-size: 3rem;
+        margin-top: 1em;
+        margin-left:2em;
+        font-size: 2rem;
         text-align: center;
     }
     
